--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <div class="pageContent">
 
             <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
+            <h1>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
-            <iframe src="https://mtm828.github.io/3d-scene/" width="100%" height="300px">
+            <h1>My Projects</h1>
+            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"><div><h3>D3</h3><p>Ebic project.</p></div>
 
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
