--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
             <h1>My Projects</h1>
-            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"><h3 style="display: inline-block; float: right;">D3</h3><p style="display: inline-block;"><br>Ebic project.</p>
+            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"></iframe><h3 style="display: inline-block; float: right;">D3</h3><p style="display: inline-block;"><br>Ebic project.</p>
 
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
