--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
     <head>
         <title>MTM828 - Home</title>
-        <link rel="stylesheet" href="https://mtm828.github.io/recources/style.css">
+        <link rel="stylesheet" href="./recources/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="mtm828, github, developer">
         <meta name="description" content="MTM828">
         <meta name="author" content="MTM828">
         <meta name="charset" content="utf-8">
-        <script src="https://mtm828.github.io/recources/script.js"></script>
+        <script src="./recources/script.js"></script>
     </head>
     <body>
         <a href="https://github.com/mtm828">
-            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://mtm828.github.io/recources/icon.png">
-            <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway'; width:">MTM828</h1>
+            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="./recources/icon.png">
+            <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: 'raleway';">MTM828</h1>
         </a>
         <ul class="topNav">
             <li><a href="">Link A</a></li>
@@ -27,11 +27,21 @@
             <p style="font-family: 'raleway'; text-align: center;">Hey there, I'm MTM828!</p><br><br>
             <h1>About Me</h1>
             <p>I'm a software and web developer, I know <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, <b>Python</b>, <b>C++</b> and <b>Java</b>.</p><br>
+            <p>I enjoy coding <del>in my spare time</del> <u>all day long</u> and I do pretty much nothing else. Nohing.</p><br>
+            <p>I'm currently trying to to some 3D stuff in JavaScript, with <a href="https://github.com/mrdoob/threejs">Three.js</a>.<a href="https://mtm828.github.io/3d-solar-system">This</a> is my first project.</p>
+            <small>What else am I supposed to write here?</small>
             <h1>My Projects</h1>
-            <iframe src="https://mtm828.github.io/3d-scene/" style="width: 300px; height: 300px; display: inline-block;"></iframe><h3 style="display: inline-block; float: right;">D3</h3><p style="display: inline-block;"><br>Ebic project.</p>
+            <div class="projectCard">
+                <iframe src="https://mtm828.github.io/3d-solar-system"></iframe>
+                <div class="projectCardDesc">
+                    <h3 style=>D3</h3>
+                    <p>Ebic project.<br><br><br><br>sep bru<br><br><br><br>sep bru</p>
+                </div>
+            </div>
+            <ul><li>bleh</li><li>blah</li><li>bles</li></ul>
 
             <ul class="footer">
-                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://mtm828.github.io/recources/icon.png"></a></li>
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./recources/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
         </div>
