--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <title>MTM828 - Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="mtm828, github">
-        <meta name="description" content="MTM828">
+        <meta name="googlebot" content="noindex">
         <meta name="author" content="MTM828">
         <meta name="charset" content="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="stylesheet.css">
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
@@ -41,7 +41,6 @@
             <ul><li>blah</li><li>blah</li><li>blah</li></ul>
 
             <ul class="footer">
-                <p id="sig"></p>
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./img/icon.png"></a></li>
                 <li><a href="https://mm828.github.io">Home</a></li>
             </ul>
