--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="./img/icon.png"></a></li>
-                <li><a href="https://mm828.github.io">Home</a></li>
+                <li><a href="https://mtm828.github.io">Home</a></li>
                 <li onclick="toggleDarkMode()"><b id="darkModeButton"><b></li>
             </ul>
         </div>
